--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,7 @@
       content="Web site created using create-react-app"
     />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Central de Perícias</title>
+    <title>Perícias</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
